--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Estadoes/Index.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Estadoes/Index.cshtml
@@ -3,65 +3,70 @@
 @{
     ViewData["Title"] = "Index";
 }
+<h1>Árbol de estados</h1>
+@foreach (var item in Model)
+{
 
-<h1>Gestión de estados</h1>
+    @if (item.Padre == null)
+    {
+        sacarHijos(item);
+    }
+}
+    <h1>Gestión de estados</h1>
 
-<p>
-    <a asp-action="Create">Crear nuevo estado</a>
-</p>
-<table class="table">
-    <thead class="thead-dark">
-        <tr>
-            <th>Nombre de estado</th>
-            <th>Es final?</th>
-            <th>Color estado</th>
-            <th>Padre</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-                    
-            @if (item.Padre == null) {
-                sacarHijos(item);
-            }
-
-
+    <p>
+        <a asp-action="Create">Crear nuevo estado</a>
+    </p>
+    <table class="table">
+        <thead class="thead-dark">
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NombreEstado)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Esfinal)
-                </td>
-                <td>
-                    <div style="background-color: @Html.DisplayFor(modelItem => item.ColorEstado);
+                <th>Nombre de estado</th>
+                <th>Es final?</th>
+                <th>Color estado</th>
+                <th>Padre</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+
+
+
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.NombreEstado)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Esfinal)
+                    </td>
+                    <td>
+                        <div style="background-color: @Html.DisplayFor(modelItem => item.ColorEstado);
                 height: 20px; border-radius: 15px; ">
 
-                    </div>
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PadreNavigation.NombreEstado)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.IdEstado">Editar</a> |
-                    <a asp-action="Details" asp-route-id="@item.IdEstado">Detalles</a> |
-                    <a asp-action="Delete" asp-route-id="@item.IdEstado">Eliminar</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
-
-@functions {
-    void sacarHijos(Estado item)
-    {
-    <ul>
-            @if (item.Padre == null)
-            {
-                <li>@Html.DisplayFor(modelItem => item.NombreEstado)</li>
+                        </div>
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PadreNavigation.NombreEstado)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.IdEstado">Editar</a> |
+                        <a asp-action="Details" asp-route-id="@item.IdEstado">Detalles</a> |
+                        <a asp-action="Delete" asp-route-id="@item.IdEstado">Eliminar</a>
+                    </td>
+                </tr>
             }
+        </tbody>
+    </table>
+
+    @functions {
+        void sacarHijos(Estado item)
+        {
+            <ul>
+                @if (item.Padre == null)
+                {
+                    <li>@Html.DisplayFor(modelItem => item.NombreEstado)</li>
+                }
                 @if (item.InversePadreNavigation.Count != 0)
                 {
                     <ul>
@@ -69,16 +74,16 @@
                         {
 
                             //Preguntarle por los hijos, de manera recursiva
-                            //@if (nietos.Padre == ) { 
+                            //@if (nietos.Padre == ) {
                             <li>@Html.DisplayFor(modelItem => hijos.NombreEstado)</li>
                             //}
                             sacarHijos(hijos);
                         }
                     </ul>
                 }
-          
-        
-    </ul>
+
+
+            </ul>
 
         }
     }
