--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Create.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Create.cshtml
@@ -6,7 +6,12 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/css/ol.css" type="text/css">
 <script src="https://unpkg.com/elm-pep"></script>
 <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/build/ol.js"></script>
-
+<style>
+    .map {
+        height: 800px;
+        width: 100%;
+    }
+</style>
 <h1>Crear zona</h1>
 <div id="map" class="map"></div>
 <form class="form-inline">
