--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Index.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Index.cshtml
@@ -3,8 +3,22 @@
 @{
     ViewData["Title"] = "Index";
 }
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/css/ol.css" type="text/css">
+<script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/build/ol.js"></script>
 
 <h1>Gestión de zonas</h1>
+<style>
+    .map{
+        width: 100%;
+        height: 80vh;
+    }
+
+    .zonas{
+        opacity: 50%;
+    }
+</style>
+
+<div id="map" class="map"></div>
 
 <p>
     <a asp-action="Create">Crear nueva zona</a>
@@ -25,23 +39,82 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.NombreZona)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DescripcionZona)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GeometriaZona)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.IdZona">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdZona">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdZona">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NombreZona)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DescripcionZona)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.GeometriaZona)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.IdZona">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.IdZona">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.IdZona">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+<script type="text/javascript">
+    // source
+    var layerSource = new ol.source.ImageWMS({
+        url: 'http://localhost:8080/geoserver/wms',
+        params: {
+            'LAYERS': 'view_zona'
+        },
+        ratio: 1,
+        serverType: 'geoserver',
+    });
+
+
+    console.log(layerSource);
+
+    // layer
+    var layerLayer = new ol.layer.Image({
+        className: 'zonas',
+        source: layerSource,
+    });
+
+    // view
+    var olview = new ol.View({
+        //projection: 'ESPG:4326',
+        center: [0, 0],
+        zoom: 1.5
+    })
+
+    // map
+    var map = new ol.Map({
+        target: 'map',
+        interactions: ol.interaction.defaults({
+            doubleClickZoom: true,
+            dragAndDrop: false,
+            dragPan: true,
+            keyboardPan: false,
+            keyboardZoom: false,
+            mouseWheelZoom: true,
+            pointer: true,
+            select: false
+        }),
+        controls: ol.control.defaults({
+            attribution: true,
+            zoom: true,
+        }),
+        renderer: 'canvas',
+        view: olview,
+        layers: [
+            new ol.layer.Tile({
+                source: new ol.source.OSM()
+            }),
+            layerLayer
+        ],
+        controls: ol.control.defaults(),
+        visible: true,
+        logo: false
+    });
+</script>
