Países, provincias y municipios de España marcados en el mapa del index (home)
Los municipios, al ser muchos datos tarda mucho en cargar el mapa y cuando lo mueves de posición también, lo he dejado por si os parece bien pero lo mejor será utilizar provincias o países

--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Index.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Index.cshtml
@@ -96,9 +96,9 @@
             dragAndDrop: false,
             dragPan: true,
             keyboardPan: false,
-            keyboardZoom: false,
+            keyboardZoom: true,
             mouseWheelZoom: true,
-            pointer: true,
+            pointer: false,
             select: false
         }),
         controls: ol.control.defaults({
