--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Peticions/Delete.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Peticions/Delete.cshtml
@@ -11,15 +11,11 @@
     <h4>Peticion</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaCreacion)
-        </dt>
+        <dt class = "col-sm-2">Fecha creación</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaCreacion)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LocalizacionPeticion)
-        </dt>
+        <dt class = "col-sm-2">Localización</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.LocalizacionPeticion)
         </dd>
