--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Peticions/Edit.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Peticions/Edit.cshtml
@@ -14,12 +14,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="IdPeticion" />
             <div class="form-group">
-                <label asp-for="FechaCreacion" class="control-label"></label>
+                <label asp-for="FechaCreacion" class="control-label">Fecha de creación</label>
                 <input asp-for="FechaCreacion" class="form-control" />
                 <span asp-validation-for="FechaCreacion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LocalizacionPeticion" class="control-label"></label>
+                <label asp-for="LocalizacionPeticion" class="control-label">Localización</label>
                 <input asp-for="LocalizacionPeticion" class="form-control" />
                 <span asp-validation-for="LocalizacionPeticion" class="text-danger"></span>
             </div>
