--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Nivel/Create.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Nivel/Create.cshtml
@@ -1,17 +1,8 @@
 @model Net_Gis_Falcon.Nivel
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Create";
 }
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
-</head>
-<body>
 
 <h4>Nivel</h4>
 <hr />
@@ -20,12 +11,12 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="DescripcionPregunta" class="control-label"></label>
+                <label asp-for="DescripcionPregunta" class="control-label">Descripcion de la pregunta</label>
                 <input asp-for="DescripcionPregunta" class="form-control" />
                 <span asp-validation-for="DescripcionPregunta" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Nivel1" class="control-label"></label>
+                <label asp-for="Nivel1" class="control-label">Nivel</label>
                 <input asp-for="Nivel1" class="form-control" />
                 <span asp-validation-for="Nivel1" class="text-danger"></span>
             </div>
@@ -37,8 +28,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la lista</a>
 </div>
 
-</body>
-</html>
