--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Nivel/Delete.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Nivel/Delete.cshtml
@@ -1,32 +1,20 @@
 @model Net_Gis_Falcon.Nivel
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Delete";
 }
+<h1>Eliminar</h1>
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
-</head>
-<body>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Estás seguro de que quieres eliminar esto?</h3>
 <div>
     <h4>Nivel</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DescripcionPregunta)
-        </dt>
+        <dt class = "col-sm-2">Descripcion </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DescripcionPregunta)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nivel1)
-        </dt>
+        <dt class = "col-sm-2">Nivel</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Nivel1)
         </dd>
@@ -35,8 +23,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdPregunta" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Volver a la lista</a>
     </form>
 </div>
-</body>
-</html>
