--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Nivel/Details.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Nivel/Details.cshtml
@@ -1,39 +1,27 @@
 @model Net_Gis_Falcon.Nivel
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Details";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-</head>
-<body>
+<h1>Detalles</h1>
 
 <div>
     <h4>Nivel</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DescripcionPregunta)
-        </dt>
+        <dt class = "col-sm-2">Descripcion </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DescripcionPregunta)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nivel1)
-        </dt>
+        <dt class = "col-sm-2">Nivel</dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Nivel1)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.IdPregunta">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.IdPregunta">Editar</a> |
+    <a asp-action="Index">Volver a la lista</a>
 </div>
-</body>
-</html>
+
