--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Nivel/Edit.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Nivel/Edit.cshtml
@@ -1,18 +1,10 @@
 @model Net_Gis_Falcon.Nivel
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Edit";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
-</head>
-<body>
-
+<h1>Editar</h1>
 <h4>Nivel</h4>
 <hr />
 <div class="row">
@@ -21,12 +13,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="IdPregunta" />
             <div class="form-group">
-                <label asp-for="DescripcionPregunta" class="control-label"></label>
+                <label asp-for="DescripcionPregunta" class="control-label">Descripción</label>
                 <input asp-for="DescripcionPregunta" class="form-control" />
                 <span asp-validation-for="DescripcionPregunta" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Nivel1" class="control-label"></label>
+                <label asp-for="Nivel1" class="control-label">Nivel</label>
                 <input asp-for="Nivel1" class="form-control" />
                 <span asp-validation-for="Nivel1" class="text-danger"></span>
             </div>
@@ -38,8 +30,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la lista</a>
 </div>
 
-</body>
-</html>
+
