--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Respuestas/Create.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Respuestas/Create.cshtml
@@ -1,26 +1,17 @@
 @model Net_Gis_Falcon.Respuestum
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Create";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
-</head>
-<body>
-
-<h4>Respuestum</h4>
+<h4>Respuestas</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CuerpoRespuesta" class="control-label"></label>
+                <label asp-for="CuerpoRespuesta" class="control-label">Cuerpo de la respuesta</label>
                 <input asp-for="CuerpoRespuesta" class="form-control" />
                 <span asp-validation-for="CuerpoRespuesta" class="text-danger"></span>
             </div>
@@ -34,7 +25,7 @@
                 <select asp-for="Nivel" class ="form-control" asp-items="ViewBag.Nivel"></select>
             </div>
             <div class="form-group">
-                <label asp-for="RespuestaPadre" class="control-label"></label>
+                <label asp-for="RespuestaPadre" class="control-label">Respuesta padre</label>
                 <select asp-for="RespuestaPadre" class ="form-control" asp-items="ViewBag.RespuestaPadre"></select>
             </div>
             <div class="form-group">
@@ -45,8 +36,5 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la lista</a>
 </div>
-
-</body>
-</html>
