--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Respuestas/Delete.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Respuestas/Delete.cshtml
@@ -1,54 +1,38 @@
 @model Net_Gis_Falcon.Respuestum
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Delete";
 }
+<h1>Eliminar</h1>
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
-</head>
-<body>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Estás seguro de que quieres eliminar esto? </h3>
 <div>
-    <h4>Respuestum</h4>
+    <h4>Respuestas</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CuerpoRespuesta)
-        </dt>
-        <dd class = "col-sm-10">
+        <dt class="col-sm-2">Cuerpo de la respuesta</dt>
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CuerpoRespuesta)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Principal)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Principal)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NivelNavigation)
-        </dt>
-        <dd class = "col-sm-10">
+        <dt class="col-sm-2">Nivel</dt>
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.NivelNavigation.DescripcionPregunta)
-        </dd class>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RespuestaPadreNavigation)
-        </dt>
-        <dd class = "col-sm-10">
+        </dd>
+        <dt class="col-sm-2">Respuesta del padre</dt>
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.RespuestaPadreNavigation.CuerpoRespuesta)
-        </dd class>
+        </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdRespuesta" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
+        <a asp-action="Index">Volver a la lista</a>
     </form>
 </div>
-</body>
-</html>
