--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Respuestas/Details.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Respuestas/Details.cshtml
@@ -1,51 +1,37 @@
 @model Net_Gis_Falcon.Respuestum
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Details";
 }
 
-<!DOCTYPE html>
+<h1>Detalles</h1>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-</head>
-<body>
 
 <div>
-    <h4>Respuestum</h4>
+    <h4>Respuestas</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CuerpoRespuesta)
-        </dt>
-        <dd class = "col-sm-10">
+        <dt class="col-sm-2">Cuerpo de la respuesta </dt>
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CuerpoRespuesta)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Principal)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Principal)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NivelNavigation)
-        </dt>
-        <dd class = "col-sm-10">
+        <dt class="col-sm-2">Nivel</dt>
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.NivelNavigation.DescripcionPregunta)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RespuestaPadreNavigation)
-        </dt>
-        <dd class = "col-sm-10">
+        <dt class="col-sm-2">Respuesta del padre </dt>
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.RespuestaPadreNavigation.CuerpoRespuesta)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.IdRespuesta">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.IdRespuesta">Editar</a> |
+    <a asp-action="Index">Volver a la lista</a>
 </div>
-</body>
-</html>
