--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Respuestas/Edit.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Respuestas/Edit.cshtml
@@ -1,19 +1,12 @@
 @model Net_Gis_Falcon.Respuestum
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Edit";
 }
 
-<!DOCTYPE html>
+<h1>Editar</h1>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
-</head>
-<body>
-
-<h4>Respuestum</h4>
+<h4>Respuestas</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -21,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="IdRespuesta" />
             <div class="form-group">
-                <label asp-for="CuerpoRespuesta" class="control-label"></label>
+                <label asp-for="CuerpoRespuesta" class="control-label">Cuerpo de la respuesta</label>
                 <input asp-for="CuerpoRespuesta" class="form-control" />
                 <span asp-validation-for="CuerpoRespuesta" class="text-danger"></span>
             </div>
@@ -36,7 +29,7 @@
                 <span asp-validation-for="Nivel" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="RespuestaPadre" class="control-label"></label>
+                <label asp-for="RespuestaPadre" class="control-label">Respuesta del padre</label>
                 <select asp-for="RespuestaPadre" class="form-control" asp-items="ViewBag.RespuestaPadre"></select>
                 <span asp-validation-for="RespuestaPadre" class="text-danger"></span>
             </div>
@@ -48,8 +41,5 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la lista</a>
 </div>
-
-</body>
-</html>
