--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Create.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Create.cshtml
@@ -38,10 +38,10 @@
                 <span asp-validation-for="NombreZona" class="text-danger"></span>
             </div>
             <!--<div class="form-group">
-        <label asp-for="GeometriaZona" class="control-label">Nombre de la zona</label>
-        <input asp-for="GeometriaZona" class="form-control" />
-        <span asp-validation-for="GeometriaZona" class="text-danger"></span>
-    </div>-->
+                <label asp-for="GeometriaZona" class="control-label">Nombre de la zona</label>
+                <input asp-for="GeometriaZona" class="form-control" />
+                <span asp-validation-for="GeometriaZona" class="text-danger"></span>
+            </div>-->
             <div class="form-group">
                 <label asp-for="DescripcionZona" class="control-label">Descripción</label>
                 <textarea asp-for="DescripcionZona" class="form-control" placeholder="(máx 100 caracteres)" style="resize: none">
@@ -74,4 +74,5 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    const btn = document.getElementById("btn");
 }
