--- a/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,14 +5,15 @@
 }
 
 <h1>Registro</h1>
+<h4>Crear una nueva cuenta.</h4>
+<hr />
+<h6 class="alert-danger">@ViewData["Error"]</h6>
+<div asp-validation-summary="All" class="text-danger"></div>
 
-<div class="row">
-    <div class="col-md-6">
-        <h6 class="alert-danger">@ViewData["Error"]</h6>
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Crear una nueva cuenta.</h4>
-            <hr />
-            <div asp-validation-summary="All" class="text-danger"></div>
+
+<form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+    <div class="row row-cols-3">
+        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
@@ -28,10 +29,13 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+        </div>
+        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Input.Name"></label>
                 <input asp-for="Input.Name" class="form-control" />
                 <span asp-validation-for="Input.Name" class="text-danger"></span>
+                
             </div>
             <div class="form-group">
                 <label asp-for="Input.Surname"></label>
@@ -43,12 +47,8 @@
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
-           
-            <button type="submit" class="btn btn-primary">Register</button>
-        </form>
-    </div>
-    <div  class="col-md-6">
             <div class="form-group">
+
                 <label asp-for="Input.Gender">Genero</label>
                 <select asp-for="Input.Gender" class="form-control">
                     <option value="M">Masculino</option>
@@ -58,6 +58,9 @@
                 </select>
                 <span asp-validation-for="Input.Gender" class="text-danger"></span>
             </div>
+
+        </div>
+        <div class="col-md-4">
             <div class="form-group">
                 <label asp-for="Input.Language"></label>
                 <input asp-for="Input.Language" class="form-control" />
@@ -78,8 +81,12 @@
                 <input asp-for="Input.BirthDay" class="form-control" />
                 <span asp-validation-for="Input.BirthDay" class="text-danger"></span>
             </div>
-    </div>
-</div>
+            <button type="submit" class="btn btn-primary">Register</button>
+            </div>
+        </div>
+</form>
+
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
