Aleja, dale estilo a esto

--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Shared/_Layout.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Shared/_Layout.cshtml
@@ -55,6 +55,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Zonas" asp-action="Index">Gestión de zonas</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="ZonasOperadores" asp-action="Index">Gestión de operadores</a>
+                                </li>
 
                             }
                             @if (c.Value == "admin" || c.Value == "operador")
