--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Delete.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Delete.cshtml
@@ -4,33 +4,35 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h1>Eliminar</h1>
+
+<h3>¿Estás seguro de que quieres eliminar esto? </h3>
+
 <div>
     <h4>Zona</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.NombreZona)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.NombreZona)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DescripcionZona)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DescripcionZona)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.GeometriaZona)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.GeometriaZona)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdZona" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
