--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Index.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Index.cshtml
@@ -29,7 +29,7 @@
     }
 }
 <table class="table">
-    <thead>
+    <thead class="thead-dark">
         <tr>
             <th>
                 Nombre de la zona
