--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/ZonasOperadores/Create.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/ZonasOperadores/Create.cshtml
@@ -1,19 +1,10 @@
 @model Net_Gis_Falcon.OperadoresZona
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Create";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
-</head>
-<body>
-
-<h4>OperadoresZona</h4>
+<h4>Operadores Zona</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -35,8 +26,5 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver</a>
 </div>
-
-</body>
-</html>
