--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/ZonasOperadores/Delete.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/ZonasOperadores/Delete.cshtml
@@ -1,43 +1,31 @@
 @model Net_Gis_Falcon.OperadoresZona
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Delete";
 }
 
-<!DOCTYPE html>
+<h1>Eliminar</h1>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
-</head>
-<body>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Estás seguro de que quieres eliminar esto? </h3>
 <div>
-    <h4>OperadoresZona</h4>
+    <h4>Operadores de Zona</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OperadorNavigation)
-        </dt>
-        <dd class = "col-sm-10">
+        <dt class="col-sm-2">Operadores</dt>
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.OperadorNavigation.Apellido)
-        </dd class>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ZonaNavigation)
-        </dt>
-        <dd class = "col-sm-10">
+        </dd>
+        <dt class="col-sm-2">Zonas </dt>
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ZonaNavigation.NombreZona)
-        </dd class>
+        </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Operador" />
         <input type="hidden" asp-for="Zona" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Volver a la lista</a>
     </form>
 </div>
-</body>
-</html>
+
