--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/ZonasOperadores/Details.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/ZonasOperadores/Details.cshtml
@@ -1,39 +1,26 @@
 @model Net_Gis_Falcon.OperadoresZona
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Details";
+
 }
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-</head>
-<body>
+<h1>Detalles</h1>
 
 <div>
-    <h4>OperadoresZona</h4>
+    <h4>Operadores de Zona</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OperadorNavigation)
-        </dt>
-        <dd class = "col-sm-10">
+        <dt class="col-sm-2">Operador</dt>
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.OperadorNavigation.Apellido)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ZonaNavigation)
-        </dt>
-        <dd class = "col-sm-10">
+        <dt class="col-sm-2">Zona </dt>
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ZonaNavigation.NombreZona)
         </dd>
     </dl>
 </div>
 <div>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la lista</a>
 </div>
-</body>
-</html>
