--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/ZonasOperadores/Edit.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/ZonasOperadores/Edit.cshtml
@@ -1,19 +1,12 @@
 @model Net_Gis_Falcon.OperadoresZona
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Edit";
 }
 
-<!DOCTYPE html>
+<h1>Editar</h1>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
-</head>
-<body>
-
-<h4>OperadoresZona</h4>
+<h4>Operadores de Zona</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -29,8 +22,5 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la lista</a>
 </div>
-
-</body>
-</html>
