Avance de preguntas
Co-Authored-By: Raul Barquero Consuegra <4938+a814967@users.noreply.github.gsissc.myatos.net>
Co-Authored-By: Leidy Alejandra Cortes Gonzalez <4943+a814972@users.noreply.github.gsissc.myatos.net>
Co-Authored-By: Javier Garcia-Duarte Saenz <4940+a815141@users.noreply.github.gsissc.myatos.net>

--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Nivel/Index.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Nivel/Index.cshtml
@@ -35,4 +35,30 @@
             </tr>
         }
     </tbody>
+<h1>Árbol de nivel</h1>
+@foreach (var item in Model)
+{
+
+    @if (item.Nivel1 == 0)
+    {
+        sacarHijos(item);
+
+    }
+
+}
 </table>
+@functions{
+    void sacarHijos(Nivel item)
+    {
+        <ul id="myUL">
+
+            <li class="caret">
+                @Html.DisplayFor(modelItem => item.DescripcionPregunta)
+            </li>
+            <li class="caret">
+                @Html.DisplayFor(modelItem => item.Respuesta.Count)
+            </li>
+        </ul>
+
+        }
+    }
