Intento de arbol en preguntas respuesta
Co-Authored-By: Raul Barquero Consuegra <4938+a814967@users.noreply.github.gsissc.myatos.net>
Co-Authored-By: Javier Garcia-Duarte Saenz <4940+a815141@users.noreply.github.gsissc.myatos.net>
Co-Authored-By: Leidy Alejandra Cortes Gonzalez <4943+a814972@users.noreply.github.gsissc.myatos.net>

--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Respuestas/Edit.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Respuestas/Edit.cshtml
@@ -30,7 +30,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="RespuestaPadre" class="control-label">Respuesta del padre</label>
-                <select asp-for="RespuestaPadre" class="form-control" asp-items="ViewBag.RespuestaPadre"></select>
+                <select asp-for="RespuestaPadre" class="form-control" asp-items="ViewBag.RespuestaPadre">
+                    <option value="">Sin padre</option>
+                </select>
                 <span asp-validation-for="RespuestaPadre" class="text-danger"></span>
             </div>
             <div class="form-group">
