--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Respuestas/Create.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Respuestas/Create.cshtml
@@ -26,7 +26,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="RespuestaPadre" class="control-label">Respuesta padre</label>
-                <select asp-for="RespuestaPadre" class ="form-control" asp-items="ViewBag.RespuestaPadre"></select>
+                <select asp-for="RespuestaPadre" class="form-control" asp-items="ViewBag.RespuestaPadre">
+                    <option value="">Sin padre</option>
+                </select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
