Selección de capas (falta diseño de la página)

--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Index.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Index.cshtml
@@ -7,6 +7,12 @@
     <!--<h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>-->
     <div id="map" class="map"></div>
+    <div class="sidebar">
+        <h2>Base Layers</h2>
+        <input type="radio" name="baseLayerRadioButton" value="OSMBase" checked>OSMBase<br>
+        <input type="radio" name="baseLayerRadioButton" value="OSMHumanitarian">OSMHumanitarian<br>
+        <input type="radio" name="baseLayerRadioButton" value="OSMCountries">OSMCountries<br>
+    </div>
     <div id="info">&nbsp;</div>
     <script src="~/js/site.js"></script>
 
