--- a/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Index.cshtml
+++ b/Net_Gis_Falcon/Net_Gis_Falcon/Views/Home/Index.cshtml
@@ -7,13 +7,33 @@
     <!--<h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>-->
     <div id="map" class="map"></div>
+</div>
+<div class="card">
     <div class="sidebar">
         <h2>Base Layers</h2>
-        <input type="radio" name="baseLayerRadioButton" value="OSMBase" checked>OSMBase<br>
-        <input type="radio" name="baseLayerRadioButton" value="OSMHumanitarian">OSMHumanitarian<br>
-        <input type="radio" name="baseLayerRadioButton" value="OSMCountries">OSMCountries<br>
+        <input type="radio" name="baseLayerRadioButton" value="OSMBase" checked> OSMBase<br>
+        <input type="radio" name="baseLayerRadioButton" value="OSMHumanitarian"> OSMHumanitarian<br>
+        <input type="radio" name="baseLayerRadioButton" value="OSMCountries"> OSMCountries<br>
     </div>
-    <div id="info">&nbsp;</div>
-    <script src="~/js/site.js"></script>
-
 </div>
+
+<div id="info">&nbsp;</div>
+<script src="~/js/site.js"></script>
+<style>
+    .card {
+        position: center;
+        display: -ms-flexbox;
+        display: flex;
+        padding: 1rem;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        margin-top: 20px;
+        background: rgba(224, 224, 224);
+        color: rgb(0 0 0);
+        width: 280px;
+        padding: 20px;
+        box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.377);
+        border-radius: 20px;
+    }
+
+</style>
